# cppfort

./: --output  .clang-format  .codex_todo.json  .cppcheck  .gitignore  .tmp_decl_probe.cpp  .tmp_hanging_probe.cpp  AGENTS.md  ANTIGRAVITY-README.md  APEX_SWIMLANES.md  ARCHITECTURE.md  ASPIRATIONS.md  BASELINE_REALITY_CHECK.md  BUILD_REPORT.md  CLAUDE-README.md  CMakeLists.txt  CMakeLists.txt.local  CMakeLists_csv_test.txt  CMakeLists_nway.txt  CMakeUserPresets.json  CODING_STANDARDS.md  COMPLETION_SUMMARY.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  CORPUS_FIXES.md  CPP2_FEATURES_STATUS.md  Cpp2FIROps.cpp.inc.d  Cpp2FIROps.h.inc.d  Cpp2FIROpsDialect.cpp.inc.d  Cpp2FIROpsDialect.h.inc.d  Cpp2Ops.cpp.inc.d  Cpp2Ops.h.inc.d  Cpp2OpsDialect.cpp.inc.d  Cpp2OpsDialect.h.inc.d  Cpp2OpsTypes.cpp.inc.d  Cpp2OpsTypes.h.inc.d  Cpp2SONOps.cpp.inc.d  Cpp2SONOps.h.inc.d  Cpp2SONOpsAttrDefs.cpp.inc.d  Cpp2SONOpsAttrDefs.h.inc.d  (+322 more)
old/: CMakeLists.txt  Cpp2ConcurrencyDialect.cpp  Cpp2FIRDialect.cpp  Cpp2SONJMMVerification.cpp  FIRArenaInferencePass.cpp  FIRSCCPPass.cpp  LoopToKernel.cpp  SONGradADLoweringPass.cpp  SONJMMVerificationPass.cpp  SONJacobianMatrixMulLoweringPass.cpp  ast.cpp  ast_to_fir_stub.cpp  clang_ast_reverse.cpp  cppfort-opt.cpp  lexer.cpp  main.cpp  metafunction_processor.cpp  mixed-as-for-variant-20-types.cpp  mixed-autodiff-taylor.cpp  mixed-bugfix-for-literal-as-nttp.cpp  mixed-default-arguments.cpp  mixed-float-literals.cpp  mixed-function-expression-with-pointer-capture.cpp  mixed-initialization-safety-3.cpp  mixed-inspect-values-2.cpp  mixed-lifetime-safety-and-null-contracts.cpp  mixed-lifetime-safety-pointer-init-4.cpp  mixed-loops-out.cpp  mixed-parameter-passing-with-forward.cpp  mixed-postexpression-with-capture.cpp  pure2-assert-expected-not-null.cpp  pure2-assert-optional-not-null.cpp  pure2-assert-shared-ptr-not-null.cpp  pure2-bugfix-for-discard-precedence.cpp  pure2-bugfix-for-indexed-call.cpp  pure2-bugfix-for-max-munch.cpp  pure2-bugfix-for-non-local-function-expression.cpp  pure2-bugfix-for-ufcs-arguments.cpp  pure2-enum.cpp  pure2-for-loop-range-with-lambda.cpp  (+24 more)
src/: CMakeLists.txt  ConvertFIRToSON.cpp  Cpp2ConcurrencyDialect.cpp  Cpp2Dialect.cpp  Cpp2SONDialect.cpp  FIRArenaInferencePass.cpp  FIRCoroutineFrameSROAPass.cpp  FIRSCCPPass.cpp  FIRTransferEliminationPass.cpp  SCCPPass.cpp  SONConcurrencyAnalysisPass.cpp  ast.cpp  ast_to_fir.cpp  clang_ast_reverse.cpp  code_generator.cpp  combinator_hierarchy.cpp  contract_processor.cpp  cppfort  cppfort-opt.REMOVED.git-id  cppfort-opt.cpp  cppfort-son  cppfort-son.REMOVED.git-id  cppfort.REMOVED.git-id  cppfort_mlir.cpp  crdt_graph.cpp  crdt_patch.cpp  diagnostic_collector.cpp  emitter.cpp  lexer.cpp  main.cpp  markdown_hash.cpp  metafunction_processor.cpp  mixed-bounds-check.cpp  mixed-bounds-out.cpp  mixed-bounds-safety-with-assert-2.cpp  mixed-bounds-safety-with-assert.cpp  mixed-bugfix-for-cpp2-comment-cpp1-sequence.cpp  mixed-bugfix-for-ufcs-non-local.cpp  mixed-forwarding.cpp  mixed-function-expression-and-std-ranges-for-each-with-capture.cpp  (+77 more)
src/attestation/: attestation.cpp  attestation.h
src/codegen/: type_emitter.cpp
src/compat/: CMakeLists.txt  hash_memory.cpp
src/ir/: CMakeLists.txt  ir.cpp  ir.h  mock_sea_of_nodes.cpp  sea_of_nodes_impl.cpp  sea_of_nodes_impl.h  test_sea_of_nodes.cpp
src/mlir/: CMakeLists.txt  ODDialect.cpp  ODDialect.td  ODDialectRegistration.cpp
src/mlir_bridge/: CMakeLists.txt  mlir_abstractions.h  mlir_bridge.cpp  mlir_bridge.h  mlir_bridge_test.cpp
src/parsers/: c_parser.cpp  c_parser.h
src/seaofnodes/: CMakeLists.txt
src/selfhost/: CMakeLists.txt  DESERIALIZE_CPP2.md  bbcursive.cpp2  bbcursive.h2  bootstrap_tags.cpp2  canonical_emitter.cpp2  canonical_types.cpp2  cpp2.cpp2  cpp2.h2  cpp2_keywords.h2  cpp2_main.cpp  cpp2_main.cpp2  cpp2_mmap.cpp  cpp2_mmap.h  cppfort.cpp2  cppfort_config.h.in  cppfort_main.cpp  generator.cpp2  generator.h2  rbcursive.cpp2  serde_tree.h2  series-toolkit-showcase.md  test_simple.cpp2  trikeshed.h  trikeshed.h2  trikeshed_either.cpp2  trikeshed_join.cpp2  trikeshed_manifold.cpp2  trikeshed_scanner.cpp2  trikeshed_series.cpp2
src/son/: chapter01.cpp2
src/stage0/: CMakeLists.txt  README.md  REGRESSION_RUNNER_GIT.md  advanced_graph_solutions.cpp  ast.h  attestation_nodes.cpp  attestation_nodes.h  bidirectional.cpp  bidirectional.h  c_lexer.cpp  c_mode_router.h  c_parser.cpp  c_parser.h  c_preprocessor.cpp  complete_pattern_engine.cpp  complete_pattern_engine.h  confix_fishy_detector.cpp  confix_fishy_detector.cpp2  confix_fishy_detector.h  confix_orbit.cpp  confix_orbit.h  confix_tracker.h  correlator.cpp  correlator.h  cpp2_cas.cpp  cpp2_cas.h  cpp2_emitter.cpp  cpp2_emitter.h  cpp2_inline.h  cpp2_key_resolver.cpp  cpp2_key_resolver.h  cpp2_key_resolver_new.cpp  cpp2_mlir_assembler.cpp  cpp2_mlir_assembler.h  (+248 more)
tests/: CMakeLists.txt  aliasing_rules_test.cpp  allocation_strategy_test.cpp  annotated_grammar_test.cpp  arena_inference_test.cpp  benchmark_allocation_performance.cpp  benchmark_combinators.cpp  benchmark_combinators.cpp2  benchmark_coroutine_frames.cpp  benchmark_sccp.cpp  benchmark_sccp_standalone.cpp  borrow_checker_test.cpp  borrow_checker_validation_test.cpp  bytebuffer_test  bytebuffer_test.cpp  bytebuffer_test.cpp2  channelized_concurrency_test.cpp  codegen_extraction_test.cpp  combinator_integration_test.cpp  combinator_integration_test.cpp2  combinator_laws_test.cpp  combinator_laws_test.cpp2  coroutine_frame_elision_test.cpp  coroutine_scope_semantics_test.cpp  coroutine_scope_validation_test.cpp  cpp26_contracts_test.cpp  cpp2_metafunctions_autodiff.cpp2  cpp2_metafunctions_basic_value.cpp2  cpp2_metafunctions_cursor_type.cpp2  cpp2_metafunctions_dense_view.cpp2  cpp2_metafunctions_elementwise.cpp2  cpp2_metafunctions_elementwise_add.cpp2  cpp2_metafunctions_enum.cpp2  cpp2_metafunctions_flag_enum.cpp2  cpp2_metafunctions_indexed_view.cpp2  cpp2_metafunctions_interface.cpp2  cpp2_metafunctions_print.cpp2  cpp2_metafunctions_regex.cpp2  cpp2_metafunctions_rule_of_zero.cpp2  cpp2_metafunctions_union.cpp2  (+172 more)
(+5739 files in other folders)
